# comet-enrich

./: .gitignore  .rumdl.toml  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  TODO.md  deny.toml  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
configs/: reclassification_rules.yaml
configs/provenance/: affiliations.yaml  funders.yaml  resource_type_general.yaml
configs/schema/: enrichment_input_schema.json
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  lib.rs  main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: artifact_lifecycle.rs  checkpoint.rs  datacite_enums.rs  dedup.rs  fanout.rs  lib.rs  manifest.rs  match_service.rs  method.rs  options.rs  provenance.rs  reader.rs  run.rs  schema.rs  staged.rs  staged_run.rs  transform.rs  writer.rs
crates/core/tests/: match_service.rs  run_transform.rs
crates/datacite-affiliations/: Cargo.toml
crates/datacite-affiliations/src/: lib.rs  parser.rs
crates/datacite-affiliations/tests/: end_to_end.rs
crates/datacite-funders/: Cargo.toml
crates/datacite-funders/src/: lib.rs
crates/datacite-resource-type-general/: Cargo.toml
crates/datacite-resource-type-general/src/: config.rs  lib.rs  matcher.rs
crates/datacite-resource-type-general/tests/: end_to_end.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
docs/: conventions.md  installation.md  testing-conventions.md  usage.md
docs/commands/: affiliations.md  funders.md  resource-type-general.md
