[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/datacite-affiliations",
    "crates/datacite-resource-type-general",
    "crates/datacite-funders",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/cometadata/comet-enrichments"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
comet-enrichment-core = { path = "crates/core" }