[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    "crates/datacite-affiliations",
    "crates/datacite-resource-type-general",
    "crates/datacite-funders",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/cometadata/comet-enrichments"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
comet-enrichment-core = { path = "crates/core" }
# Adding dependencies shared by two or more crates here
# to make it easier to manage their versions
anyhow = "1"
flate2 = "1"
jsonschema = { version = "0.18", default-features = false, features = ["resolve-file"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
tempfile = "3"