[package]
name = "comet-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
comet-enrichment-core = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
simple_logger = "5"
rtg = { package = "comet-enrich-datacite-resource-type-general", path = "../datacite-resource-type-general" }
affiliations = { package = "comet-enrich-datacite-affiliations", path = "../datacite-affiliations" }
funders = { package = "comet-enrich-datacite-funders", path = "../datacite-funders" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
