[package]
name = "comet-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
# Pinned to 4.5.x: the 4.6 bash generator escapes hyphenated binary names
# inconsistently, so no subcommand or flag completion ever matches.
clap_complete = "~4.5"
comet-enrichment-core = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
simple_logger = "5"
rtg = { package = "comet-enrich-datacite-resource-type-general", path = "../datacite-resource-type-general" }
affiliations = { package = "comet-enrich-datacite-affiliations", path = "../datacite-affiliations" }
funders = { package = "comet-enrich-datacite-funders", path = "../datacite-funders" }

[dev-dependencies]
assert_cmd = "2"
comet-test-support = { workspace = true }
predicates = "3"
serde_json = { workspace = true }

[lints]
workspace = true
