[package]
name = "comet-enrichment-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
flate2 = "1"
glob = "0.3"
indicatif = "0.17"
jsonschema = { version = "0.18", default-features = false, features = ["resolve-file"] }
log = "0.4"
num_cpus = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
