[package]
name = "comet-enrichment-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
glob = "0.3"
indicatif = "0.17"
jsonschema = { workspace = true }
log = { workspace = true }
num_cpus = "1"
rayon = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
