[package]
name = "comet-enrichment-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
flate2 = { workspace = true }
glob = "0.3"
indicatif = "0.17"
jsonschema = { workspace = true }
log = { workspace = true }
num_cpus = "1"
rayon = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
xxhash-rust = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
comet-test-support = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"

[lints]
workspace = true
