[package]
name = "comet-enrich-datacite-affiliations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
comet-enrichment-core = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
