[package]
name = "comet-enrich-datacite-affiliations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
comet-enrich-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
comet-enrich-test-support = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
