[package]
name = "comet-enrich-datacite-funders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
comet-enrichment-core = { workspace = true }
serde_json = { version = "1", features = ["preserve_order"] }

[lints]
workspace = true
