[package]
name = "comet-enrich-datacite-resource-type-general"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
comet-enrichment-core = { workspace = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
strsim = "0.11"

[dev-dependencies]
flate2 = "1"
tempfile = "3"

[lints]
workspace = true
