[package]
name = "comet-enrich-datacite-resource-type-general"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
comet-enrich-core = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
strsim = "0.11"

[dev-dependencies]
comet-enrich-test-support = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
